--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-O programa carregador.asm é uma versão do código que funciona passando diretamente os inputs na section .data.
+Este programa simula um carregador de arquivos que verifica se há espaço suficiente em blocos de memória para armazenar arquivos de tamanhos variados. Ele combina código em C e Assembly: o arquivo carregador.c gerencia a lógica principal, como a leitura dos argumentos da linha de comando, enquanto calcular_blocos.asm implementa uma função em Assembly para calcular os blocos necessários. O programa recebe uma lista de tamanhos de arquivos como entrada e exibe uma mensagem de erro caso não haja espaço suficiente para armazená-los.
+
+Para compilar o programa, você pode usar o Makefile fornecido, que automatiza o processo com comandos como make, make run e make clean. Caso prefira compilar manualmente, é necessário montar o arquivo Assembly com nasm, compilar o código C com gcc e, por fim, linkar os objetos para gerar o executável. O programa é executado passando os tamanhos dos arquivos como argumentos, por exemplo: ./carregador 200 500 100 700 100.
+
+Um problema conhecido é o segmentation fault que ocorre ao final da execução. Esse erro ainda não foi resolvido e pode estar relacionado ao gerenciamento de memória ou à interação entre o código C e o Assembly. Contribuições para corrigir esse problema são bem-vindas! O projeto foi desenvolvido como parte de um trabalho de Software Básico e está aberto para melhorias e colaborações.
